# lattice

./: .gitattributes  .gitignore  .hlint.yaml  README.md  cabal.project  cabal.project.freeze  fourmolu.yaml  lattice.cabal
.github/workflows/: ci.yml
app/cli/: Main.hs
app/server/: Main.hs
docs/: ARCHITECTURE.md  CP-ENGINE.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  PROTOCOL.md  README.md  SAT-ENGINE.md  TESTING.md  VISUALIZER.md
puzzles/: README.md
puzzles/cnf/: sat-demo.cnf  unsat-demo.cnf
puzzles/graph/: hard.json  petersen.json
puzzles/nonogram/: hard.json  heart.json
puzzles/sudoku/: SOLUTIONS.md  diff-4x4.txt
src/: Lattice.hs
src/Lattice/: Brute.hs  Event.hs  Protocol.hs
src/Lattice/CP/: Propagator.hs  Queue.hs  Search.hs  Solver.hs
src/Lattice/Core/: Domain.hs  Types.hs
src/Lattice/Encode/: Graph.hs  Nonogram.hs  Queens.hs  Sudoku.hs
src/Lattice/SAT/: Analyze.hs  ClauseDB.hs  Dimacs.hs  Encode.hs  Solver.hs  Trail.hs  Types.hs  VSIDS.hs  Watched.hs
test/: Main.hs
test/golden/: heart.sol
web/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  vercel.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/about/: page.tsx
web/components/: ConflictExplainer.tsx  GraphView.tsx  HelpOverlay.tsx  Minimap.tsx  NonogramBoard.tsx  PuzzleView.tsx  QueensBoard.tsx  Tour.tsx  TrailView.tsx
web/lib/: explain.ts  minimap.ts  protocol.ts  replay.ts  share.ts  useReducedMotion.ts  useSolver.ts
web/lib/puzzles/: index.ts
web/scripts/: WALKTHROUGH.md  verify-replay.ts  walkthrough.mjs
